--- a/env.example
+++ b/env.example
@@ -1,3 +1,6 @@
 IP=127.0.0.1
-DB_ROOT_PASSWORD=password
-DB_NAME=wordpress
+DNS=example.local
+DB_NAME: wordpress
+DB_ROOT_PASSWORD: password
+DB_USER: user
+DB_PASSWORD: password
